--- a/db_toolkit/docs/mongo_cfg.sample
+++ b/db_toolkit/docs/mongo_cfg.sample
@@ -9,12 +9,17 @@
 server = mymongodb.server.com
 
 # Optional keys may be set in the configuration file or on an instance, and are as follows:
-#   username:    The username to login in with
-#   password:    The password to login in with
-#   port:        The port number to use, default to 27017
-#   dbname:      The name of the database
-#   auth_source: The name of the authentication database
-#   collection:  The name of the database collection
+#   username:         The username to login in with
+#   password:         The password to login in with
+#   port:             The port number to use, default to 27017
+#   dbname:           The name of the database
+#   auth_source:      The name of the authentication database
+#   collection:       The name of the database collection
+#   ssl:              Boolean (true/false) to enable or disables TLS/SSL for the connection
+#   replica_set:      The name of the replica set
+#   max_idle_time_ms: Maximum number of milliseconds that a connection can remain idle
+#   app_name:         Custom app name
+#   retry_writes:     Boolean (true/false) to enable retryable writes
 
 username = myusername
 password = mypassword
@@ -23,3 +28,9 @@ port = 27017
 dbname = mydatabase
 auth_source = admin
 collection = mycollection
+
+ssl = true
+replica_set = myreplicaset
+max_idle_time_ms = 120000
+app_name = myappname
+retry_writes = false
